[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Hamster.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Hamster.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fart.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 26.0768

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.656934, 1 )
colors = PoolColorArray( 0.0837494, 0.379883, 0.162988, 1, 0.694118, 0.792157, 0.721569, 1, 1, 1, 1, 0.0588235 )

[node name="Hamster" type="RigidBody2D"]
collision_layer = 2
linear_damp = 0.2
script = ExtResource( 2 )

[node name="Image" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 15.0

[node name="JumpLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_left = -16.0
margin_top = -71.0
margin_right = 21.0
margin_bottom = -57.0
text = "JUMP!"
align = 1
valign = 1

[node name="FartParticles" type="CPUParticles2D" parent="."]
z_index = -1
amount = 5
lifetime = 0.5
draw_order = 1
texture = ExtResource( 3 )
direction = Vector2( -1, 1 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.4
angular_velocity = 100.0
angular_velocity_random = 1.0
angle_random = 1.0
scale_amount = 0.05
color_ramp = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Hamster_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Hamster_body_exited"]
